--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -88,7 +88,8 @@
             "php bin/console d:d:d --force --if-exists",
             "php bin/console d:d:c",
             "php bin/console d:s:u --force",
-            "php bin/console d:f:l --append"
+            "php bin/console d:f:l --append",
+            "php bin/console make:puml"
         ]
     },
     "conflict": {
