--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.16",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.5",
+        "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.6",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
@@ -89,7 +90,7 @@
             "@auto-scripts"
         ],
         "fixtures" : [
-            "php bin/console d:d:d --force --if-exists",
+            "php bin/console d:d:d --force",
             "php bin/console d:d:c",
             "php bin/console d:s:u --force",
             "php bin/console d:f:l --append",
